providers/linear/tests/snapshots/team-browse__00-list-root.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: replayed
---
## step 0: list /
README.md  file  unknown  stable
teams  dir  -  -
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
