providers/linear/tests/snapshots/team-browse__01-lookup-pntr.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: replayed
---
## step 1: lookup /teams :: PNTR
entry: PNTR dir
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
