providers/linear/tests/snapshots/team-browse__07-lookup-open.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: replayed
---
## step 7: lookup /teams/PNTR/issues :: open
entry: open dir
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
