providers/linear/tests/snapshots/team-browse__08-lookup-all.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: replayed
---
## step 8: lookup /teams/PNTR/issues :: all
entry: all dir
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
